Fixing background image on mobile

--- a/client/scss/index.scss
+++ b/client/scss/index.scss
@@ -356,3 +356,10 @@ input[type=button]:focus, input[type=text]:focus {
   }
 }
 
+@media screen and (max-width:768px){
+  body {
+    /*background-size: contain;*/
+    position: absolute;
+  }
+}
+
